<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GNSSFinder</string>
    <string name="title_description">this image is for title</string>
    <string name="camera_image_description">this image is camera button</string>
    <string name="actionbar_backhome">home</string>
    <string name="menu_close">Close</string>
    <string name="menu_info">About GNSSFinder</string>
    <string name="setting_button_description">image setting button</string>
    <string name="gnss_selection_label">GNSS Selection</string>
    <string name="label_gps_blockIIF_checkbox">GPS Block IIF</string>
    <string name="label_galileo_checkbox">Galileo</string>
    <string name="label_qzss_checkbox">QZSS</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="camera_icon">camera icon</string>
    <string name="usingGPSLabel">Using GPS</string>
    <string name="locationLabel">User Location</string>
    <string name="label_latitude">Latitude[deg]</string>
    <string name="label_longitude">Longitude[deg]</string>
    <string name="label_altitude">Altitude[m]</string>

</resources>